[package]
name = "typos-codegen"
version = "1.0.2"
authors = ["Ed Page <eopage@gmail.com>"]
description = "Source Code Spelling Correction"
repository = "https://github.com/crate-ci/typos"
readme = "../../../README.md"
categories = ["text-processing"]
license = "MIT"
edition = "2018"
publish = false

[badges]
azure-devops = { project = "crate-ci", pipeline = "typos" }
codecov = { repository = "crate-ci/typos" }

[dependencies]
phf = { version = "0.8", features = ["unicase"] }
phf_codegen = "0.8"
csv = "1.0"
unicase = "2.5"
codegenrs = "0.1"
structopt = "0.3"
