[package]
name = "typos-dict-verify"
version = "1.3.0"
authors = ["Ed Page <eopage@gmail.com>"]
description = "Source Code Spelling Correction"
repository = "https://github.com/crate-ci/typos"
readme = "../../../README.md"
categories = ["text-processing"]
license = "MIT"
edition = "2018"
publish = false

[package.metadata.release]
release = false

[dependencies]
csv = "1.1"
unicase = "2.5"
codegenrs = "1.0"
structopt = "0.3"
varcon = { version = "^0.5", path = "../../varcon" }
itertools = "0.10"
edit-distance = "2.1"
