[package]
name = "typos-dict-verify"
version = "1.3.0"
authors = ["Ed Page <eopage@gmail.com>"]
description = "Source Code Spelling Correction"
repository = "https://github.com/crate-ci/typos"
readme = "../../../README.md"
categories = ["text-processing"]
license = "MIT"
edition = "2021"
rust-version = "1.59.0"  # MSRV
publish = false

[package.metadata.release]
release = false

[dependencies]
csv = "1.1"
unicase = "2.5"
codegenrs = "2.0"
clap = { version = "3.2", features = ["derive"] }
varcon = { version = "^0.6", path = "../../varcon" }
itertools = "0.10"
edit-distance = "2.1"
