[package]
name = "typos-vars-codegen"
version = "1.3.0"
authors = ["Ed Page <eopage@gmail.com>"]
description = "Source Code Spelling Correction"
repository = "https://github.com/crate-ci/typos"
readme = "../../../README.md"
categories = ["text-processing"]
license = "MIT"
edition = "2018"
publish = false

[badges]
azure-devops = { project = "crate-ci", pipeline = "typos" }
codecov = { repository = "crate-ci/typos" }

[package.metadata.release]
disable-release = true

[dependencies]
varcon = { version = "^0.5", path = "../../varcon", features = ["flags"] }
varcon-core = { version = "^2.0", path = "../../varcon-core", features = ["flags"] }
typos = { version = "^0.7", path = "../../typos" }
unicase = "2.5"
codegenrs = "1.0"
structopt = "0.3"
clap = "2"
log = "0.4"
env_logger = "0.9"
clap-verbosity-flag = "0.3"
itertools = "0.10"
dictgen = { version = "0.1", path = "../../dictgen", features = ["codegen"] }
