[package]
name = "typos-vars-codegen"
version = "1.3.0"
authors = ["Ed Page <eopage@gmail.com>"]
description = "Source Code Spelling Correction"
repository = "https://github.com/crate-ci/typos"
readme = "../../../README.md"
categories = ["text-processing"]
license = "MIT"
edition = "2018"
publish = false

[package.metadata.release]
release = false

[dependencies]
varcon = { version = "^0.6", path = "../../varcon", features = ["flags"] }
varcon-core = { version = "^2.0", path = "../../varcon-core", features = ["flags"] }
typos = { version = "^0.8", path = "../../typos" }
unicase = "2.5"
codegenrs = "2.0"
clap = { version = "3.0", features = ["derive"] }
clap-verbosity-flag = "0.4"
log = "0.4"
env_logger = "0.9"
itertools = "0.10"
dictgen = { version = "^0.2", path = "../../dictgen", features = ["codegen"] }
