[package]
name = "varcon-codegen"
version = "1.1.0"
authors = ["Ed Page <eopage@gmail.com>"]
description = "Source Code Spelling Correction"
repository = "https://github.com/crate-ci/typos"
readme = "../../../README.md"
categories = ["text-processing"]
license = "MIT"
edition = "2018"
publish = false

[badges]
azure-devops = { project = "crate-ci", pipeline = "typos" }
codecov = { repository = "crate-ci/typos" }

[dependencies]
codegenrs = "1.0"
structopt = "0.3"
varcon-core = { version = "1.0", path = "../../varcon-core", features = ["parser"] }
