[package]
name = "varcon-codegen"
version = "1.3.0"
authors = ["Ed Page <eopage@gmail.com>"]
description = "Source Code Spelling Correction"
repository = "https://github.com/crate-ci/typos"
readme = "../../../README.md"
categories = ["text-processing"]
license = "MIT"
edition = "2018"
publish = false

[package.metadata.release]
release = false

[dependencies]
codegenrs = "2.0"
clap = { version = "3.0", features = ["derive"] }
varcon-core = { version = "^2.0", path = "../../varcon-core", features = ["parser"] }
