[package]
name = "wikipedia-codegen"
version = "0.4.0"
authors = ["Ed Page <eopage@gmail.com>"]
description = "Source Code Spelling Correction"
repository = "https://github.com/crate-ci/typos"
readme = "../README.md"
categories = ["text-processing"]
license = "MIT"
edition = "2018"
publish = false

[package.metadata.release]
release = false

[dependencies]
unicase = "2.5"
itertools = "0.10"
codegenrs = "2.0"
clap = { version = "3.1", features = ["derive"] }
dictgen = { version = "^0.2", path = "../../dictgen", features = ["codegen"] }
